add poll endpoints, improve compatible version check, implement db entity deletion, update documentation
