# src/main/resources/openapi/documentation.yaml
@@ -61,18 +61,9 @@ paths:
             type: string
       responses:
         200:
-          description: Value of version matching (1 if client > supported, -1 if client < supported, 0 if client == supported)
-          content:
-            text/plain:
-              schema:
-                type: integer
-            examples:
-              ExampleUnsupported:
-                value: -1
-              ExampleMatching:
-                value: 0
-              ExampleAhead:
-                value: 1
+          description: Client is supported
+        409:
+          description: Client is not supported
         400:
           description: Version parameter missing
   /user:
@@ -380,10 +371,60 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/DetailedPoll"
-
-
-
-
+    post:
+      description: Edit the poll, only the poll creator can do this
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/EditPollRequest"
+      responses:
+        200:
+          description: Poll edited successfully
+        400:
+          description: parameters missing or poll does not exist
+        401:
+          description: the user is not authorized to edit this poll
+    put:
+      description: Create a new Poll
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreatePollRequest"
+      responses:
+        200:
+          description: Poll created successfully
+        400:
+          description: some parameters are missing
+        413:
+          description: the user has exceeded the maximum number of polls that they created
+  /poll/join:
+    post:
+      description: Join a poll
+      parameters:
+        - name: pollID
+          in: query
+          required: true
+      responses:
+        200:
+          description: Successfully joined poll
+        400:
+          description: pollID missing or poll does not exist
+  /poll/leave:
+    post:
+      description: Leave a poll
+      parameters:
+        - name: pollID
+          in: query
+          required: true
+      responses:
+        200:
+          description: Left poll if it exists
+        400:
+          description: pollID parameter missing
 
 components:
   schemas:
@@ -488,7 +529,7 @@ components:
         userCount:
           type: number
         lastUpdated:
-          type: string
+          type: epoch milliseconds
         type:
           type: number
         editable:
@@ -502,16 +543,16 @@ components:
           type: string
           optional: true
         dateStart:
-          type: date
+          type: epoch milliseconds
           optional: true
         dateEnd:
-          type: date
+          type: epoch milliseconds
           optional: true
         dateTimeStart:
-          type: datetime
+          type: epoch milliseconds
           optional: true
         dateTimeEnd:
-          type: datetime
+          type: epoch milliseconds
           optional: true
     UserVote:
       type: object
@@ -540,7 +581,7 @@ components:
         - type: object
           properties:
             created:
-              type: datetime
+              type: epoch milliseconds
             options:
               type: array
               items:
@@ -559,3 +600,75 @@ components:
               type: boolean
             shareURL:
               type: url
+    CreatePollRequest:
+      type: object
+      required:
+        - name
+        - maxPerUserVoteCount
+        - description
+        - type
+        - allowsMaybe
+        - allowsEditing
+      properties:
+        name:
+          type: string
+        maxPerUserVoteCount:
+          type: number
+          description: The number of yes/maybe votes a user can vote on, -1 for infitiy
+        description:
+          type: string
+        type:
+          type: number
+          description: The type of the poll, STRING(0), DATE(1), DATETIME(2)
+        allowsMaybe:
+          type: boolean
+          description: Wether or not "maybe" is an allowed vote option
+        allowsEditing:
+          type: boolean
+          description: wether or not the poll can be edited (votes or other edits, except re-enabling editing)
+    EditPollRequest:
+      type: object
+      required:
+        - pollID
+      properties:
+        pollID:
+          type: string
+          required: true
+        delete:
+          type: boolean
+          required: false
+        name:
+          type: string
+          required: false
+        description:
+          type: string
+          required: false
+        maxPerUserVoteCount:
+          type: number
+          required: false
+        allowsMaybe:
+          type: boolean
+          required: false
+        allowsEditing:
+          type: boolean
+          required: false
+        userRemove:
+          type: array
+          description: list of all userIDsthat should be removed from this poll
+          items:
+            type: string
+        votes:
+          type: array
+          description: list of vote changes (pollID can be left out)
+          items:
+            $ref: "#/components/schemas/VoteChangeRequest"
+        options:
+          type: array
+          description: list of option modifications, options with an id get deleted, all others get added to the poll
+          items:
+            $ref: "#/components/schemas/ComplexOption"
+        notes:
+          type: array
+          description: list of notes for users
+          items:
+            $ref: "#/components/schemas/UserNote"
